[gd_scene load_steps=2 format=3 uid="uid://bqh6mlrej1uii"]

[ext_resource type="Script" path="res://hud.gd" id="1_l35cb"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_l35cb")

[node name="StartButton" type="Button" parent="."]
offset_left = 186.0
offset_top = 188.0
offset_right = 282.0
offset_bottom = 219.0
text = "Start Game"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 190.0
offset_top = 153.0
offset_right = 277.0
offset_bottom = 176.0
text = "Game Over"

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = 208.0
offset_top = 109.0
offset_right = 259.0
offset_bottom = 140.0
text = "Reset"

[node name="HealthLabel" type="Label" parent="."]
offset_left = 328.0
offset_top = 27.0
offset_right = 380.0
offset_bottom = 50.0

[node name="Essence" type="Label" parent="."]
offset_left = 30.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 43.0

[node name="Gold" type="Label" parent="."]
offset_left = 220.0
offset_top = 12.0
offset_right = 260.0
offset_bottom = 35.0

[node name="Diamond" type="Label" parent="."]
offset_left = 343.0
offset_top = 43.0
offset_right = 383.0
offset_bottom = 66.0

[node name="WaveCount" type="Label" parent="."]
offset_left = 24.0
offset_top = 60.0
offset_right = 64.0
offset_bottom = 83.0

[node name="NextWave" type="Button" parent="."]
offset_left = 20.0
offset_top = 93.0
offset_right = 112.0
offset_bottom = 124.0
text = "Next Wave"

[node name="BonusDamageLabel" type="Label" parent="."]
offset_left = 44.0
offset_top = 662.0
offset_right = 84.0
offset_bottom = 685.0
text = "DMG"

[node name="BonusCritMLabel" type="Label" parent="."]
offset_left = 286.0
offset_top = 662.0
offset_right = 326.0
offset_bottom = 685.0
text = "CM"

[node name="BonusCritCLabel" type="Label" parent="."]
offset_left = 292.0
offset_top = 610.0
offset_right = 332.0
offset_bottom = 633.0
text = "CC"

[node name="BonusDefRadLabel" type="Label" parent="."]
offset_left = 284.0
offset_top = 563.0
offset_right = 324.0
offset_bottom = 586.0
text = "DR"

[node name="BonusProjNumLabel" type="Label" parent="."]
offset_left = 49.0
offset_top = 612.0
offset_right = 89.0
offset_bottom = 635.0
text = "PR"

[node name="BonusASLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 560.0
offset_right = 90.0
offset_bottom = 583.0
text = "AS"

[node name="AddBonusDamage" type="Button" parent="."]
offset_left = 224.0
offset_top = 662.0
offset_right = 280.0
offset_bottom = 693.0
text = "DMG+"

[node name="AddBonusCritM" type="Button" parent="."]
offset_left = 419.0
offset_top = 660.0
offset_right = 462.0
offset_bottom = 691.0
text = "CM+"

[node name="AddBonusCritC" type="Button" parent="."]
offset_left = 427.0
offset_top = 603.0
offset_right = 465.0
offset_bottom = 634.0
text = "CC+"

[node name="AddBonusDefRad" type="Button" parent="."]
offset_left = 422.0
offset_top = 554.0
offset_right = 462.0
offset_bottom = 585.0
text = "DR+"

[node name="AddBonusProjNum" type="Button" parent="."]
offset_left = 227.0
offset_top = 613.0
offset_right = 267.0
offset_bottom = 644.0
text = "PN+"

[node name="AddBonusAS" type="Button" parent="."]
offset_left = 224.0
offset_top = 562.0
offset_right = 261.0
offset_bottom = 593.0
text = "AS+"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="NextWave" to="." method="_on_next_wave_pressed"]
[connection signal="pressed" from="AddBonusDamage" to="." method="_on_add_bonus_damage_pressed"]
[connection signal="pressed" from="AddBonusCritM" to="." method="_on_add_bonus_crit_m_pressed"]
[connection signal="pressed" from="AddBonusCritC" to="." method="_on_add_bonus_crit_c_pressed"]
[connection signal="pressed" from="AddBonusDefRad" to="." method="_on_add_bonus_def_rad_pressed"]
[connection signal="pressed" from="AddBonusProjNum" to="." method="_on_add_bonus_proj_num_pressed"]
[connection signal="pressed" from="AddBonusAS" to="." method="_on_add_bonus_as_pressed"]
